--- a/index.html
+++ b/index.html
@@ -51,35 +51,16 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>Howdy.</h3>  
+	   	<h3>Partfolio</h3>  
 
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
 				<li><a class="smoothscroll" href="#about" title="">About</a></li>
 				<li><a class="smoothscroll" href="#skills" title="">Skills</a></li>
 				<li><a class="smoothscroll" href="#credentials" title="">Experience</a></li>
-				<li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>
-				<li><a class="smoothscroll" href="#stats" title="">Stats</a></li>				
+				<li><a class="smoothscroll" href="#portfolio" title="">Works</a></li>			
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>						
 			</ul>	
-
-			<ul class="header-social-list">
-	         <li>
-	         	<a href="#"><i class="fa fa-facebook-square"></i></a>
-	         </li>
-	         <li>
-	         	<a href="#"><i class="fa fa-twitter"></i></a>
-	         </li>
-            <li>
-            	<a href="#"><i class="fa fa-behance"></i></a>
-            </li>
-	         <li>
-	         	<a href="#"><i class="fa fa-dribbble"></i></a>
-	         </li>
-	         <li>
-	         	<a href="#"><i class="fa fa-instagram"></i></a>
-	         </li>
-	      </ul>		
 
 		</nav>  <!-- end #menu-nav-wrap -->
 
