--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 
    			<p class="animate-this">
 				kostiantyn.demchenko@nure.ua<br>
-			   	info@howdywebsite.com			     
+				https://kostyademchenko.github.io/Partfolio/#about			     
 			   </p>
    		</div> <!-- end col-four -->
 
@@ -569,9 +569,7 @@
    			<h5 class="animate-this">Call Me At</h5>
 
    			<p class="animate-this">
-   				Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+				Mobile: (+380) 98 912 29 46<br>
 			   </p>
    		</div> <!-- end col-four -->
    		
