--- a/index.html
+++ b/index.html
@@ -559,10 +559,8 @@
    		<div class="col-six tab-full collapse">
    			<h5 class="animate-this">Email Me At</h5>
 
-   			<p class="animate-this">
-				kostiantyn.demchenko@nure.ua<br>
-				https://kostyademchenko.github.io/Partfolio/#about			     
-			   </p>
+   			<p class="animate-this">kostiantyn.demchenko@nure.ua</p>
+			<a href="https://kostyademchenko.github.io/Partfolio/#about">Site</a>
    		</div> <!-- end col-four -->
 
    		<div class="col-six tab-full">
