--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>My Partfoio</title>
+	<title>My Portfoio</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
