--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
    			<p>
    				<a href="https://t.me/amateur_japanese_animation" class="button full-width animate-this">Contact Me</a>
-   				<a href="./assets/files/Demcehenko Kostiantyn_CV.pdf" class="button button-primary full-width animate-this" download>Download CV</a>
+   				<a href="./assets/files/cv/Demcehenko Kostiantyn_CV.pdf" class="button button-primary full-width animate-this" download>Download CV (UKR)</a>
+   				<a href="./assets/files/cv/Demcehenko Kostiantyn_CV (ENG).pdf" class="button button-primary full-width animate-this" download>Download CV (ENG)</a>
    			</p>  			
 
    		</div> <!-- end about-profile  -->
