--- a/index.html
+++ b/index.html
@@ -396,6 +396,31 @@
 		<div class="row portfolio-content">
 			<div class="col-twelve">
 				<div id="folio-wrap" class="bricks-wrapper">
+					
+					<div class="brick folio-item">
+						<div class="item-wrap animate-this" data-src="images/portfolio/gallery/Weather-app.jpg"
+							data-sub-html="#06">
+							<a href="#" class="overlay">
+								<img src="images/portfolio/Weather-app.jpg" alt="Bicycle">
+								<div class="item-text">
+									<span class="folio-types">
+										Web Development
+									</span>
+									<h3 class="folio-title">Weather App</h3>
+								</div>
+							</a>
+							<a href="https://kostyademchenko.github.io/weather-app1.0/" class='details-link' title="details">
+								<i class="icon-UpRightArrow"></i>
+							</a>
+						</div> <!-- end item-wrap -->
+
+						<div id="06" class='hide'>
+							<h4>Weather-app</h4>
+							<a href="https://kostyademchenko.github.io/weather-app1.0/" class='details-link'>Vive result</a>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
+								quis nulla voluptate fugiat velit. </p>
+						</div>
+					</div> <!-- end folio-item -->
 
 					<div class="brick folio-item">
 						<div class="item-wrap animate-this" data-src="images/portfolio/gallery/Lemon-School.jpg"
@@ -411,15 +436,15 @@
 							</a>
 							<a href="https://dimitry-dotru.github.io/lemonResultPage/" class='details-link'
 								title="details">
-								<i class="icon-UpRightArrow"></i>
+							<i class="icon-UpRightArrow"></i>
 							</a>
 						</div> <!-- end item-wrap -->
 
 						<div id="05" class='hide'>
 							<h4>Lemon School</h4>
+							<a href="https://dimitry-dotru.github.io/lemonResultPage/" class='details-link'>Vive result</a>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
-								quis nulla voluptate fugiat velit. <a
-									href="https://dimitry-dotru.github.io/lemonResultPage/">Details</a></p>
+								quis nulla voluptate fugiat velit.</p>
 						</div>
 					</div> <!-- end folio-item -->
 
@@ -442,9 +467,9 @@
 
 						<div id="01" class='hide'>
 							<h4>IKEA</h4>
+							<a href="https://kostyademchenko.github.io/IKEA/" class='details-link'>Vive result</a>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
-								quis nulla voluptate fugiat velit. <a
-									href="https://kostyademchenko.github.io/IKEA/">Details</a></p>
+								quis nulla voluptate fugiat velit.</p>
 						</div>
 					</div> <!-- end folio-item -->
 
@@ -468,9 +493,9 @@
 
 						<div id="02" class='hide'>
 							<h4>Calculator</h4>
+							<a href="https://kostyademchenko.github.io/Calculator_v1.0/" class='details-link'>Vive result</a>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
-								quis nulla voluptate fugiat velit. <a
-									href="https://kostyademchenko.github.io/Calculator_v1.0/">Details</a></p>
+								quis nulla voluptate fugiat velit.</p>
 						</div>
 					</div> <!-- end folio-item -->
 
@@ -494,9 +519,9 @@
 
 						<div id="03" class='hide'>
 							<h4>Master Tao</h4>
+							<a href="https://kostyademchenko.github.io/Master-Tao/" class='details-link'>Vive result</a>
 							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
-								quis nulla voluptate fugiat velit. <a
-									href="https://kostyademchenko.github.io/Master-Tao/">Details</a></p>
+								quis nulla voluptate fugiat velit.</p>
 						</div>
 					</div> <!-- end folio-item -->
 
@@ -519,9 +544,8 @@
 
 						<div id="04" class='hide'>
 							<h4>WarmPlace</h4>
-							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit. 
-								<a href="https://kostyademchenko.github.io/WarmPlace/">Details</a>
-							</p>
+							<a href="https://kostyademchenko.github.io/WarmPlace/" class='details-link'>Vive result</a>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt quis nulla voluptate fugiat velit.</p>
 						</div>
 					</div> <!-- end folio-item -->
 
