--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
 						<div class="progress percent30"><span>30%</span></div>
 						<strong>React</strong>
 					</li>
+					<li class="animate-this" data-animate="fadeInRight">
+						<div class="progress percent50"><span>50%</span></div>
+						<strong>Rest API</strong>
+					</li>
 				</ul>
 
 			</div> <!-- end col-six -->
@@ -396,6 +400,31 @@
 		<div class="row portfolio-content">
 			<div class="col-twelve">
 				<div id="folio-wrap" class="bricks-wrapper">
+
+					<div class="brick folio-item">
+						<div class="item-wrap animate-this" data-src="images/portfolio/gallery/Currency_Converter.jpg"
+							data-sub-html="#07">
+							<a href="#" class="overlay">
+								<img src="images/portfolio/Currency_Converter.jpg" alt="Bicycle">
+								<div class="item-text">
+									<span class="folio-types">
+										React.js Development
+									</span>
+									<h3 class="folio-title">CurrencyConverter</h3>
+								</div>
+							</a>
+							<a href="https://kostyademchenko.github.io/Itop/" class='details-link' title="details">
+								<i class="icon-UpRightArrow"></i>
+							</a>
+						</div> <!-- end item-wrap -->
+
+						<div id="06" class='hide'>
+							<h4>Weather-app</h4>
+							<a href="https://kostyademchenko.github.io/weather-app1.0/" class='details-link'>Vive result</a>
+							<p>Lorem ipsum Dolor deserunt labore sint officia. Magna et aute enim proident tempor sunt
+								quis nulla voluptate fugiat velit. </p>
+						</div>
+					</div> <!-- end folio-item -->
 					
 					<div class="brick folio-item">
 						<div class="item-wrap animate-this" data-src="images/portfolio/gallery/Weather-app.jpg"
@@ -404,7 +433,7 @@
 								<img src="images/portfolio/Weather-app.jpg" alt="Bicycle">
 								<div class="item-text">
 									<span class="folio-types">
-										Web Development
+										Web Development (using Rest API)
 									</span>
 									<h3 class="folio-title">Weather App</h3>
 								</div>
