My works update

--- a/index.html
+++ b/index.html
@@ -428,6 +428,240 @@
               <div
                 class="item-wrap animate-this"
                 data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#13"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Js Development </span>
+                    <h3 class="folio-title">Outside Official Site</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/outsideOfficialy/Prod"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="13" class="hide">
+                <h4>Outside Official Admin Panel</h4>
+                <a href="https://www.outside-official.com/" class="details-link"
+                  >Vive result</a
+                >
+                <p>Next.js, React, Ts, SCSS.</p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#12"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Js Development </span>
+                    <h3 class="folio-title">Outside Official Admin Panel</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/outsideOfficialy/adminPanel"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="12" class="hide">
+                <h4>Outside Official Admin Panel</h4>
+                <a
+                  href="https://www.admin.outside-official.com/"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>Next.js, React, Ts, Tailwind.</p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#11"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Js Development </span>
+                    <h3 class="folio-title">To Do</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/KostyaDemchenko/to_do_list"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="11" class="hide">
+                <h4>To Do</h4>
+                <a
+                  href="https://github.com/KostyaDemchenko/to_do_list"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>React, Ts, CSS, Redux.</p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#10"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Web Development </span>
+                    <h3 class="folio-title">Bonny Flowers</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/KostyaDemchenko/BonnyFlowersComponetns"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="10" class="hide">
+                <h4>Bonny Flowers</h4>
+                <a
+                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>
+                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
+                  enim proident tempor sunt quis nulla voluptate fugiat velit.
+                </p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#09"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Js Development </span>
+                    <h3 class="folio-title">Bin Packing Problem Resolving</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/KostyaDemchenko/Bin-packing-problem"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="09" class="hide">
+                <h4>Bin Packing Problem Resolving</h4>
+                <a
+                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>
+                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
+                  enim proident tempor sunt quis nulla voluptate fugiat velit.
+                </p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#08"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> React.js Development </span>
+                    <h3 class="folio-title">Product List On React</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/KostyaDemchenko/ProductListOnReact"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="08" class="hide">
+                <h4>CurrencyConverter</h4>
+                <a
+                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>
+                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
+                  enim proident tempor sunt quis nulla voluptate fugiat velit.
+                </p>
+              </div>
+            </div>
+
+            <!-- end folio-item -->
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
                 data-sub-html="#07"
               >
                 <a href="#" class="overlay">
@@ -441,7 +675,7 @@
                   </div>
                 </a>
                 <a
-                  href="https://kostyademchenko.github.io/Itop/"
+                  href="https://kostyademchenko.github.io/Exchange_Rate/"
                   class="details-link"
                   title="details"
                 >
@@ -450,7 +684,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="06" class="hide">
+              <div id="07" class="hide">
                 <h4>Weather-app</h4>
                 <a
                   href="https://kostyademchenko.github.io/weather-app1.0/"
@@ -475,7 +709,7 @@
                   <img src="images/portfolio/Weather-app.jpg" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types">
-                      Web Development (using Rest API)
+                      Web Development (using API)
                     </span>
                     <h3 class="folio-title">Weather App</h3>
                   </div>
