My works update #2

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <div
                 class="item-wrap animate-this"
                 data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#13"
+                data-sub-html="#14"
               >
                 <a href="#" class="overlay">
                   <img
@@ -450,8 +450,8 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="13" class="hide">
-                <h4>Outside Official Admin Panel</h4>
+              <div id="14" class="hide">
+                <h4>Outside Official Site</h4>
                 <a href="https://www.outside-official.com/" class="details-link"
                   >Vive result</a
                 >
@@ -463,7 +463,7 @@
               <div
                 class="item-wrap animate-this"
                 data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#12"
+                data-sub-html="#13"
               >
                 <a href="#" class="overlay">
                   <img
@@ -485,7 +485,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="12" class="hide">
+              <div id="13" class="hide">
                 <h4>Outside Official Admin Panel</h4>
                 <a
                   href="https://www.admin.outside-official.com/"
@@ -493,6 +493,44 @@
                   >Vive result</a
                 >
                 <p>Next.js, React, Ts, Tailwind.</p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-sub-html="#12"
+              >
+                <a href="#" class="overlay">
+                  <img
+                    src="images/portfolio/Currency_Converter.jpg"
+                    alt="Bicycle"
+                  />
+                  <div class="item-text">
+                    <span class="folio-types"> Web Development </span>
+                    <h3 class="folio-title">Outside Official Email List</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/outsideOfficialy/emailListMerch"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="12" class="hide">
+                <h4>Outside Official Email List</h4>
+                <a
+                  href="https://github.com/outsideOfficialy/emailListMerch"
+                  class="details-link"
+                  >Vive result</a
+                >
+                <p>HTML</p>
               </div>
             </div>
             <!-- end folio-item -->
