My works links fixes

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
                     alt="Bicycle"
                   />
                   <div class="item-text">
-                    <span class="folio-types"> Js Development </span>
-                    <h3 class="folio-title">Outside Official Site</h3>
+                    <span class="folio-types"> Next Development </span>
+                    <h3 class="folio-title">Outside Official Site/Design</h3>
                   </div>
                 </a>
                 <a
@@ -471,7 +471,7 @@
                     alt="Bicycle"
                   />
                   <div class="item-text">
-                    <span class="folio-types"> Js Development </span>
+                    <span class="folio-types"> Next Development/Design </span>
                     <h3 class="folio-title">Outside Official Admin Panel</h3>
                   </div>
                 </a>
@@ -568,7 +568,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>React, Ts, CSS, Redux.</p>
+                <p>React,Redux, TS, CSS.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -585,7 +585,7 @@
                     alt="Bicycle"
                   />
                   <div class="item-text">
-                    <span class="folio-types"> Web Development </span>
+                    <span class="folio-types">Web Development</span>
                     <h3 class="folio-title">Bonny Flowers</h3>
                   </div>
                 </a>
@@ -602,14 +602,11 @@
               <div id="10" class="hide">
                 <h4>Bonny Flowers</h4>
                 <a
-                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  href="https://kostyademchenko.github.io/BonnyFlowersComponetns/"
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, CSS, JQuery, JavaScript, Bootstrap5.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -643,14 +640,11 @@
               <div id="09" class="hide">
                 <h4>Bin Packing Problem Resolving</h4>
                 <a
-                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  href="https://kostyademchenko.github.io/Bin-packing-problem/"
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, JS</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -667,7 +661,9 @@
                     alt="Bicycle"
                   />
                   <div class="item-text">
-                    <span class="folio-types"> React.js Development </span>
+                    <span class="folio-types">
+                      React Development (using API)
+                    </span>
                     <h3 class="folio-title">Product List On React</h3>
                   </div>
                 </a>
@@ -682,16 +678,13 @@
               <!-- end item-wrap -->
 
               <div id="08" class="hide">
-                <h4>CurrencyConverter</h4>
+                <h4>Product List On React</h4>
                 <a
-                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  href="https://github.com/KostyaDemchenko/ProductListOnReact"
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>API, React, HTML, JS, CSS.</p>
               </div>
             </div>
 
@@ -708,12 +701,14 @@
                     alt="Bicycle"
                   />
                   <div class="item-text">
-                    <span class="folio-types"> React.js Development </span>
-                    <h3 class="folio-title">CurrencyConverter</h3>
+                    <span class="folio-types">
+                      React Development (using API)
+                    </span>
+                    <h3 class="folio-title">Currency Converter</h3>
                   </div>
                 </a>
                 <a
-                  href="https://kostyademchenko.github.io/Exchange_Rate/"
+                  href="https:/https://github.com/KostyaDemchenko/Exchange_Rate"
                   class="details-link"
                   title="details"
                 >
@@ -723,16 +718,13 @@
               <!-- end item-wrap -->
 
               <div id="07" class="hide">
-                <h4>Weather-app</h4>
+                <h4>Currency Converter</h4>
                 <a
-                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  href="https://github.com/KostyaDemchenko/Exchange_Rate"
                   class="details-link"
-                  >Vive result</a
+                  >Vive code</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>API, React, HTML, JS, CSS.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -753,7 +745,7 @@
                   </div>
                 </a>
                 <a
-                  href="https://kostyademchenko.github.io/weather-app1.0/"
+                  href="https://github.com/KostyaDemchenko/weather-app1.0"
                   class="details-link"
                   title="details"
                 >
@@ -769,10 +761,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>API, JS, HTML, CSS.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -786,7 +775,7 @@
                 <a href="#" class="overlay">
                   <img src="images/portfolio/Lemon-School.jpg" alt="Bicycle" />
                   <div class="item-text">
-                    <span class="folio-types"> Web Development </span>
+                    <span class="folio-types"> Web Development\Design </span>
                     <h3 class="folio-title">Lemon School</h3>
                   </div>
                 </a>
@@ -807,10 +796,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, CSS, JS, Web-design.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -845,10 +831,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, CSS, JS, SVG.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -883,10 +866,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, CSS, JS.</p>
               </div>
             </div>
             <!-- end folio-item -->
@@ -921,10 +901,7 @@
                   class="details-link"
                   >Vive result</a
                 >
-                <p>
-                  Lorem ipsum Dolor deserunt labore sint officia. Magna et aute
-                  enim proident tempor sunt quis nulla voluptate fugiat velit.
-                </p>
+                <p>HTML, CSS, JS.</p>
               </div>
             </div>
             <!-- end folio-item -->
