Prev for my works update

--- a/index.html
+++ b/index.html
@@ -427,12 +427,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#14"
+                data-src="images/portfolio/gallery/Outside_Official_Site.png"
+                data-sub-html="#13"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Currency_Converter.jpg"
+                    src="images/portfolio/Outside_Official_Site.png"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -450,7 +450,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="14" class="hide">
+              <div id="13" class="hide">
                 <h4>Outside Official Site</h4>
                 <a href="https://www.outside-official.com/" class="details-link"
                   >Vive result</a
@@ -459,15 +459,16 @@
               </div>
             </div>
             <!-- end folio-item -->
+
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#13"
+                data-src="images/portfolio/gallery/Official_Admin_Panel.png"
+                data-sub-html="#12"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Currency_Converter.jpg"
+                    src="images/portfolio/Official_Admin_Panel.png"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -485,7 +486,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="13" class="hide">
+              <div id="12" class="hide">
                 <h4>Outside Official Admin Panel</h4>
                 <a
                   href="https://www.admin.outside-official.com/"
@@ -500,12 +501,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#12"
+                data-src="images/portfolio/gallery/emailListMerch.png"
+                data-sub-html="#11"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Currency_Converter.jpg"
+                    src="images/portfolio/emailListMerch.png"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -523,7 +524,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="12" class="hide">
+              <div id="11" class="hide">
                 <h4>Outside Official Email List</h4>
                 <a
                   href="https://github.com/outsideOfficialy/emailListMerch"
@@ -538,14 +539,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#11"
+                data-src="images/portfolio/gallery/to_do_list.png"
+                data-sub-html="#10"
               >
                 <a href="#" class="overlay">
-                  <img
-                    src="images/portfolio/Currency_Converter.jpg"
-                    alt="Bicycle"
-                  />
+                  <img src="images/portfolio/to_do_list.png" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types"> Js Development </span>
                     <h3 class="folio-title">To Do</h3>
@@ -561,7 +559,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="11" class="hide">
+              <div id="10" class="hide">
                 <h4>To Do</h4>
                 <a
                   href="https://github.com/KostyaDemchenko/to_do_list"
@@ -576,14 +574,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#10"
+                data-src="images/portfolio/gallery/BonnyFlowers.png"
+                data-sub-html="#09"
               >
                 <a href="#" class="overlay">
-                  <img
-                    src="images/portfolio/Currency_Converter.jpg"
-                    alt="Bicycle"
-                  />
+                  <img src="images/portfolio/BonnyFlowers.png" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types">Web Development</span>
                     <h3 class="folio-title">Bonny Flowers</h3>
@@ -599,7 +594,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="10" class="hide">
+              <div id="09" class="hide">
                 <h4>Bonny Flowers</h4>
                 <a
                   href="https://kostyademchenko.github.io/BonnyFlowersComponetns/"
@@ -614,12 +609,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#09"
+                data-src="images/portfolio/gallery/Bin-packing-problem.png"
+                data-sub-html="#08"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Currency_Converter.jpg"
+                    src="images/portfolio/Bin-packing-problem.png"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -637,7 +632,7 @@
               </div>
               <!-- end item-wrap -->
 
-              <div id="09" class="hide">
+              <div id="08" class="hide">
                 <h4>Bin Packing Problem Resolving</h4>
                 <a
                   href="https://kostyademchenko.github.io/Bin-packing-problem/"
@@ -649,46 +644,6 @@
             </div>
             <!-- end folio-item -->
 
-            <div class="brick folio-item">
-              <div
-                class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
-                data-sub-html="#08"
-              >
-                <a href="#" class="overlay">
-                  <img
-                    src="images/portfolio/Currency_Converter.jpg"
-                    alt="Bicycle"
-                  />
-                  <div class="item-text">
-                    <span class="folio-types">
-                      React Development (using API)
-                    </span>
-                    <h3 class="folio-title">Product List On React</h3>
-                  </div>
-                </a>
-                <a
-                  href="https://github.com/KostyaDemchenko/ProductListOnReact"
-                  class="details-link"
-                  title="details"
-                >
-                  <i class="icon-UpRightArrow"></i>
-                </a>
-              </div>
-              <!-- end item-wrap -->
-
-              <div id="08" class="hide">
-                <h4>Product List On React</h4>
-                <a
-                  href="https://github.com/KostyaDemchenko/ProductListOnReact"
-                  class="details-link"
-                  >Vive result</a
-                >
-                <p>API, React, HTML, JS, CSS.</p>
-              </div>
-            </div>
-
-            <!-- end folio-item -->
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
